Fix white loading screen on firefox

--- a/css/discovery-rs.css
+++ b/css/discovery-rs.css
@@ -1,6 +1,7 @@
 html, body {
     width: 100%;
     height: 100%;
+    background: black;
     margin: 0;
     border: 0;
     overflow: hidden;
